--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SyncBid">
+        android:theme="@style/Theme.SyncBid"
+        android:usesCleartextTraffic="true">
+        <!--
+            usesCleartextTraffic="true" es necesario para HTTP (no HTTPS) en desarrollo local.
+            En producción con HTTPS, quitar esta línea.
+        -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -21,7 +26,6 @@
             android:theme="@style/Theme.SyncBid">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
